@startuml
hide circle

class Equipement {
  numero de serie : numeric : KEY
  nature : varchar
  type : varchar
  modele : varchar
  marque : varchar
  prix_e : numeric
}


class L_intervention {
  numero : numeric : KEY
  prix_i : numeric : CAN BE NULL
  dateIntervention : date
  dtPanne : date
  description : varchar
}

class Technicien {
  nom_t : varchar
  prenom : varchar
  numero_de_telephone_t : nuemric
}

class La_configuration {
  dtAchat : date
}


class Le_fournisseur {
  code : numeric : KEY
  nom_f : varchar
  numero_de_telephone_f : numeric
  adresse_e_mail : varchar
}

class La_localite {
  numero : numeric
  rue : varchar
  code_postal : numeric
  nom_de_ville : varchar
}


class Le_contrat_de_maintenance {
  mode de paiement : {especes, carte_bleue,chèque, virement}
  montant : numeric
  dtSignature : date
}


class Unite_de_gestion {
 nom_u : varchar : KEY
 nombre de membres : numeric
}


class Affectation {
  dtAffectation : date
}



Le_fournisseur "1" -- "1..n" Technicien : travaille pour <
L_intervention "0..n" --- "1" Technicien : intervient <
La_configuration "0..n" -- "1..n" Unite_de_gestion
(La_configuration,Unite_de_gestion) . Affectation
Le_contrat_de_maintenance "0..1" -- "0..n" La_configuration : concerne >
Le_fournisseur "1" --- "0..n" La_configuration : propose >
Equipement "1..n" - "1" La_configuration : constitue >
La_localite "1..n" --- "1" Le_fournisseur : se trouve a <
Le_contrat_de_maintenance "0..n" --- "1" Le_fournisseur  : effectue <
Unite_de_gestion "1" --- "0..n" L_intervention : redige >
Equipement "1" -- "0..n" L_intervention : concerne <



note as n1
  On considere que :

  les attributs pour lesquels ce n'est pas mentionne 'can be null' sont  NOT NULL

  Une intervention d'un Technicien sur un Equipement d'une configuration sous garantie est gratuite

  Un equipement a un numero de serie unique

  Les unites de gestion ont un nom unique pour les differencier

  Un ticket par intervention

 end note

@enduml